# MazeSnek

./: LICENSE  README.md  getting_started.md  pyproject.toml
mazesnek/: cli.py  client.py  memory.py  navigation.py  pathfinding.py  solver.py  state.py
